# rust-x86-os

./: Cargo.toml  LICENSE  README.md
src/: main.rs  terminal.rs
